--- a/front_end/login_cadastro.html
+++ b/front_end/login_cadastro.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../front_end/styles/cadastro.css">
+    <title>login_cadastro</title>
 </head>
 <body>
-    
+    <div class="main-login">
+        <div class="left-login">
+            <h1>Faça Login e abra a caixa do <br> conhecimento.</h1>
+            <img src="styles/img/1400414.png" alt="pandorabox" class="left-img" width="256" height="256">
+        </div>
+        <div class="right-login">
+            <div class="card-login">
+                <h1>LOGIN</h1>
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text"Usuário placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="senha">Senha</label>
+                    <input type="password"Senha placeholder="Senha">
+                </div>
+                <button class="btn-login">Login</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
